[tool.poetry]
name = "handshake"
version = "0.2.0"
description = "A service that's keen to process your test results"
authors = ["Rahul <saihanumarahul66@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "handshake"}]
maintainers = [
    "Rahul <saihanumarahul66@gmail.com>"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database :: Front-Ends",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pydantic = "^2.4.2"
sanic = "^23.6.0"
tortoise-orm = "^0.20.0"
click = "^8.1.7"
APScheduler = "^3.10.4"
loguru = "^0.7.2"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
sanic-testing = "^23.6.0"
psutil = "^5.9.5"
black = "^23.9.1"
pyinstaller = "^6.1.0"

[tool.poetry.extras]
excel-export = ["openpyxl"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
handshake = "handshake.services.CommandLine.center:handle_cli"
