[tool.poetry]
name = "handshakes"
version = "0.7.10"
description = "A service that's keen to process your test results"
authors = ["Rahul <saihanumarahul66@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "handshake"}]
maintainers = [
    "Rahul <saihanumarahul66@gmail.com>"
]
exclude=[ 'handshake/.env', 'handshake/prod.env', 'handshake/test.env']
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Pytest"
]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pydantic = "^2.4.2"
sanic = "^23.6.0"
tortoise-orm = "^0.20.0"
click = "^8.1.7"
loguru = "^0.7.2"
httpx = "^0.26.0"
python-dotenv = "^1.0.1"
setuptools = ">=69.2,<71.0"
ansitohtml = "^0.1.0"
aiofiles = "^24.1.0"
openpyxl = { version = "^3.1.5", optional = true }
tabulate = { version = "^0.9.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
sanic-testing = "^23.6.0"
psutil = "^5.9.5"
black = ">=23.9.1,<25.0.0"
virtualenv = "^20.25.1"
requests = "^2.31.0"
sanic-ext = "^23.12.0"

[tool.poetry.extras]
excel-export = ["openpyxl"]
print-tables = ["tabulate"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/RahulARanger/handshake"
"Bug Reports" = "https://github.com/RahulARanger/handshake/issues"
"Source" = "https://github.com/RahulARanger/handshake"


[tool.poetry.scripts]
handshake = "handshake.services.CommandLine.center:handle_cli"


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.plugins."pytest11"]
"handshakes" = "handshake.reporters.pytest_hooks"